# j7scope

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: pages.yml
apps/serve/: README.md
apps/serve/integrations/opencode/: README.md  opencode.json
apps/serve/integrations/opencode/plugin/: j7scope.ts
apps/serve/j7scope_serve/: __init__.py  __main__.py  app.py  backends.py  bus.py  protocol.py  recorder.py
apps/serve/viewer/: index.html
apps/site/: compare.html  index.html  live.html  method.html  replay.html
apps/site/assets/: jspace.css  jspace.js
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/public/runs/: index.json
apps/web/src/: App.tsx  data.ts  styles.css  types.ts
data/: concept_taxonomy.md  probe_prompts_en.jsonl  probe_prompts_zh.jsonl
docs/: platform-plan.md
experiments/: build_demo_run.py  build_demo_trace.py  capture_small.py
j7scope/: __init__.py  artifacts.py  data.py  fitting.py  patching.py  rigor.py  trace.py  viz.py
notebooks/: walkthrough_zh_en.ipynb
results/: README.md
results/runs/demo-qwen25-7b-l18/: manifest.json  metrics.json  projections.json  readouts.jsonl
results/traces/: index.json
results/traces/demo-narrative-en/: manifest.json  metrics.json  tokens.jsonl
results/traces/demo-parallel-en/: align.json  manifest.json  metrics.json  tokens.jsonl
results/traces/demo-parallel-zh/: align.json  manifest.json  metrics.json  tokens.jsonl
tvinnhugr/: __init__.py  artifacts.py  fitting.py  metrics.py  patching.py  viz.py
(+2 files in other folders)
